--- a/mcp-inspector/package.json
+++ b/mcp-inspector/package.json
@@ -3,6 +3,7 @@
     "@modelcontextprotocol/inspector": "^0.16.5"
   },
   "scripts": {
-    "server:inspect": "set DANGEROUSLY_OMIT_AUTH=true && npx @modelcontextprotocol/inspector /home/martin/Projects/upprove-mcp-server/dist/upprove-mcp-server"
+    "server:inspect:sHttp": "set DANGEROUSLY_OMIT_AUTH=true && npx @modelcontextprotocol/inspector",
+    "server:inspect:stdio": "set DANGEROUSLY_OMIT_AUTH=true && npx @modelcontextprotocol/inspector /home/martin/Projects/upprove-mcp-server/dist/upprove-mcp-server"
   }
 }
